--- a/actions/pr-labeler/action.yml
+++ b/actions/pr-labeler/action.yml
@@ -12,8 +12,14 @@ runs:
       run: |
         mkdir -p .github
         cp "${{ github.action_path }}/pr-labeler.yml" .github/pr-labeler.yml
-    - uses: TimonVS/pr-labeler-action@v4.1.1
+
+    - name: PR Labeler configuration
+      shell: bash
+      run: |
+        echo "Using the following PR Labeler configuration:"
+        cat .github/pr-labeler.yml
+        
+    - uses: TimonVS/pr-labeler-action@v5
       with:
         configuration-path: .github/pr-labeler.yml
-      env:
-        GITHUB_TOKEN: ${{ inputs.github_token }}
+        repo-token: ${{ inputs.github_token }}
