--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  local-path-from-workflows-dir:
-    # This is intentionally pointed at ./workflows/ to validate whether
-    # GitHub accepts reusable workflows outside .github/workflows.
-    uses: ./.github/workflows/pr_labeler.yml
-    secrets: inherit
+  # local-path-from-workflows-dir:
+  #   # This is intentionally pointed at ./workflows/ to validate whether
+  #   # GitHub accepts reusable workflows outside .github/workflows.
+  #   uses: ./.github/workflows/pr_labeler.yml
+  #   secrets: inherit
