--- a/actions/pr-labeler/action.yml
+++ b/actions/pr-labeler/action.yml
@@ -1,12 +1,19 @@
 name: PR labeler
 description: Label PRs using a centralized configuration file shipped with this action.
-inputs:
-  github_token:
-    description: GitHub token used to apply labels to PRs.
-    required: true
+
 runs:
   using: composite
   steps:
+
+    - name: Action info
+      shell: bash
+      run: |
+        echo "Running PR Labeler reusable workflow from ./workflows/pr_labeler.yml"
+        echo "GitHub Action path: ${{ github.action_path }}"
+        ls ${{ github.action_path }}
+        echo "GitHub workspace: ${{ github.workspace }}"
+        ls ${{ github.workspace }}
+
     - name: Setup pr-labeler config
       shell: bash
       run: |
@@ -18,8 +25,3 @@ runs:
       run: |
         echo "Using the following PR Labeler configuration:"
         cat .github/pr-labeler.yml
-        
-    - uses: TimonVS/pr-labeler-action@v5
-      with:
-        configuration-path: .github/pr-labeler.yml
-        repo-token: ${{ inputs.github_token }}
