--- a/actions/pr-labeler/action.yml
+++ b/actions/pr-labeler/action.yml
@@ -1,6 +1,11 @@
 name: PR labeler
 description: Label PRs using a centralized configuration file shipped with this action.
 
+inputs:
+  github_token:
+    description: 'GitHub token'
+    required: true
+
 runs:
   using: composite
   steps:
@@ -25,3 +30,8 @@ runs:
       run: |
         echo "Using the following PR Labeler configuration:"
         cat .github/pr-labeler.yml
+
+    - uses: TimonVS/pr-labeler-action@v5.0.0
+      with:
+        configuration-path: .github/pr-labeler.yml # optional, .github/pr-labeler.yml is the default value
+        repo-token: ${{ inputs.github_token }}
