--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -1,4 +1,4 @@
-name: Jekyll site CI/CD
+name: CI/CD mkdocs
 
 on:
   workflow_call:
@@ -11,56 +11,51 @@ permissions:
 
 # Allow one concurrent deployment
 concurrency:
-  group: "pages"
+  group: "docs"
   cancel-in-progress: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      base_url: ${{ steps.pages.outputs.base_url }}
+      artifact: ${{ steps.mkdocs.outputs.artifact }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1.161.0
-        with:
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
-      - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-        env:
-          JEKYLL_ENV: production
-          JEKYLL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Debug output
-        run: |
-          tree
-          cat _site/index.html
+      - name: Setup config
+        uses: athackst/ci/actions/mkdocs-config@main
+      - name: Build and push docs to gh-pages
+        id: mkdocs
+        uses: athackst/mkdocs-simple-plugin@main
+        with:
+          push: false
       - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-artifact@v4
+        with:
+          name: 'github-pages'
+          path: ${{ steps.mkdocs.outputs.artifact }}
+          retention-days: 1
 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/download-artifact@v4
+      - name: Download artifact
+        uses: actions/download-artifact@v4
         with:
           name: github-pages
       - name: Extract
         run: |
           mkdir _site
-          tar --directory _site -xvf "artifact.tar"
+          tar --directory _site -xvf ${{ needs.build.outputs.artifact }}
           tree
       - name: Generate ignore list from HTML files
         run: |
-          HOSTNAME="${{ needs.build.outputs.base_url }}"
-          
-          # Find all .html files, remove the _site prefix, and prepend the hostname
-          IGNORE_LIST=$(find _site -name "*.html" | sed "s|^_site|$HOSTNAME|")
+          # Find all .html files and remove the _site prefix for path-based ignores
+          IGNORE_LIST=$(find _site -name "*.html" | sed "s|^_site||")
 
           # Add additional ignored URLs manually
           IGNORE_LIST+="
@@ -79,6 +74,7 @@ jobs:
         with:
           ignore_urls: |
             ${{ env.ignore_list }}
+          ignore_new_files: true
 
   # Deployment job
   deploy:
@@ -87,7 +83,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [ build, test ]
+    needs: [build,test]
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
