--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Reusable workflow path test
+name: Test workflows and actions
 
 on:
   workflow_dispatch:
@@ -7,10 +7,41 @@ on:
 permissions:
   contents: read
   pull-requests: write
+  issues: write
 
 jobs:
-  local-path-from-workflows-dir:
-    # This is intentionally pointed at ./workflows/ to validate whether
-    # GitHub accepts reusable workflows outside .github/workflows.
-    uses: ./.github/workflows/pr_labeler.yml
-    secrets: inherit
+  # workflow-pr-labeler:
+  #   uses: ./.github/workflows/pr_labeler.yml
+  #   secrets: inherit
+
+  test-action-pr-labeler:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Run action from local path
+        uses: ./actions/pr-labeler
+        with:
+          github_token: ${{ github.token }}
+        env:
+          GITHUB_REF: refs/heads/${{ github.head_ref }}
+          GITHUB_REF_NAME: ${{ github.head_ref }}
+
+      - name: Debug PR ref
+        run: |
+          echo "github.head_ref: ${{ github.head_ref }}"
+          echo "github.event.pull_request.head.ref: ${{ github.event.pull_request.head.ref }}"
+          echo "github.event.pull_request.base.ref: ${{ github.event.pull_request.base.ref }}"
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.ref_name: ${{ github.ref_name }}"
+          echo "github.event.action: ${{ github.event.action }}"
+
+      - name: Assert label applied
+        run: python3 .github/scripts/check_pr_label.py
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          PR_LABELER_BRANCH: ${{ github.head_ref }}
+          PR_LABELER_REPO: ${{ github.repository }}
+          PR_LABELER_PR: ${{ github.event.pull_request.number }}
