--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,21 @@ jobs:
   #   uses: ./.github/workflows/pr_labeler.yml
   #   secrets: inherit
 
-  action-pr-labeler:
+  # action-labeler:
+  #   permissions:
+  #     contents: read
+  #     pull-requests: write
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: athackst/ci/actions/labeler@main
+
+  local-action-labeler:
     permissions:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      - uses: athackst/buildsmith/actions/labeler@main
-        with:
-          github_token: ${{ github.token }}
+      - uses: actions/checkout@v6
+      - uses: ./actions/labeler
+        # with:
+          # configuration-path: .github/fixtures/test-labeler.yml
