--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,5 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./actions/labeler
-        # with:
-          # configuration-path: .github/fixtures/test-labeler.yml
+        with:
+          configuration-path: .github/fixtures/test-labeler.yml
