--- a/actions/pr-labeler/action.yml
+++ b/actions/pr-labeler/action.yml
@@ -3,23 +3,35 @@ description: Label PRs using a centralized configuration file shipped with this 
 inputs:
   github_token:
     description: GitHub token used to apply labels to PRs.
-    required: true
+    required: false
+    default: "${{ github.token }}"
+  configuration-path:
+    description: "Path to the labeler configuration file. Defaults to 'labeler.yml' in the action's root directory."
+    required: false
+    default: ""
 runs:
   using: composite
   steps:
-    - name: Setup pr-labeler config
-      shell: bash
-      run: |
-        mkdir -p .github
-        cp "${{ github.action_path }}/pr-labeler.yml" .github/pr-labeler.yml
-
     - name: PR Labeler configuration
+      id: config
       shell: bash
       run: |
         echo "Using the following PR Labeler configuration:"
-        cat .github/pr-labeler.yml
+
+        if [ -z "${{ inputs.configuration-path }}" ]; then
+          CONFIG_PATH="${{ github.action_path }}/labeler.yml"
+          echo "No configuration path provided, using default '$CONFIG_PATH'."
+        else
+          CONFIG_PATH="${{ inputs.configuration-path }}"
+          echo "Using configuration from '$CONFIG_PATH':"
+        fi
+
+        [ -f "$CONFIG_PATH" ] || { echo "Config not found: $CONFIG_PATH"; exit 1; }
+
+        echo "config-path=$CONFIG_PATH" | tee -a "$GITHUB_OUTPUT"
+        cat "$CONFIG_PATH"
         
     - uses: TimonVS/pr-labeler-action@v5
       with:
-        configuration-path: .github/pr-labeler.yml
+        configuration-path: ${{ steps.config.outputs.config-path }}
         repo-token: ${{ inputs.github_token }}
