--- a/actions/mkdocs-config/requirements.txt
+++ b/actions/mkdocs-config/requirements.txt
@@ -9,3 +9,4 @@ mkdocs-material==9.6.21
 mkdocs-material-extensions==1.3.1
 mkdocstrings==0.30.1
 mkdocstrings-python-legacy==0.2.7
+markdown_gfm_admonition==0.3.0
