--- a/actions/release-draft/release-drafter.yml
+++ b/actions/release-draft/release-drafter.yml
@@ -8,13 +8,15 @@ categories:
   - title: ':zap: Breaking'
     label: 'breaking'
   - title: ':rocket: New'
-    label: 'feature'
+    label: 'enhancement'
   - title: ':bug: Bug Fixes'
     label: 'bug'
   - title: ':toolbox: Maintenance'
     label: 'maintenance'
+  - title: ':construction_worker: DevOps'
+    label: 'devops'
   - title: ':memo: Documentation'
-    label: 'docs'
+    label: 'documentation'
   - title: 'Dependency Updates'
     label: 'dependencies'
     collapse-after: 3
@@ -26,15 +28,14 @@ version-resolver:
       - 'major'
   minor:
     labels:
-      - 'feature'
-      - 'minor'
+      - 'enhancement'
   patch:
     labels:
       - 'bug'
       - 'maintenance'
-      - 'docs'
+      - 'documentation'
       - 'dependencies'
-      - 'security'
+      - 'devops'
 
 exclude-labels:
   - 'skip-changelog'
